<resources>
    <string name="app_name">Little Bar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_profile">Profile</string>
    <string name="title_gig">Gig</string>
</resources>
